--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -11,7 +11,7 @@
         margin: 0 auto -20% 27%;
 
         @media only screen and (max-width: $bp-small) {
-            margin: 0 auto -20% 33%;
+            margin: 0 auto -20% 28%;
         }
     }
     
