--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,14 +4,20 @@
     margin-top: -5rem;
 
     display: grid;
-    grid-template-columns: 1fr repeat(4, minmax(min-content, 18.75rem)) 1fr;
+    grid-template-columns: 1fr repeat(4, minmax(max-content, 18.75rem)) 1fr;
     grid-template-rows: repeat(7, min-content);
     grid-row-gap: 3rem;
+    grid-row-gap: 3rem;
     color: $color-white;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 3rem;
+    }
 
     &__heading {
         grid-row: 1 / 2;
         grid-column: 1 / -1;
+
     }
 
     &__nav {
@@ -80,8 +86,10 @@
         display: flex;
         align-items: center;        
         font-size: 1.8rem;
+
         &--1 {
             grid-column: 3 / 4;
+            margin-right: 4px;
         }
 
         &--2 {
@@ -92,7 +100,11 @@
             height: 1.8rem;
             width: 1.8rem;
             fill: $color-white;
-            margin-right: .7rem;
+            margin-right: .8rem;
+        }
+
+        & a {
+            color: orangered;
         }
     }
 
@@ -119,6 +131,11 @@
         @media only screen and (max-width: $bp-mobile) {
             grid-row: 8 / -1;
             grid-column: 2 / 6;
+            text-align: center;
+        }
+
+        & a {
+            color: orangered;
         }
     }
 }
