--- a/sass/layout/_testimonial.scss
+++ b/sass/layout/_testimonial.scss
@@ -67,7 +67,7 @@
             margin-left: 60%;
 
             @media only screen and (max-width: $bp-mobile){
-                margin-left: 50%;      
+                margin-left: 40%;      
             }  
         }
 
